Get rid of a .conf and replace it with .tac.

--- a/slosh.tac.sample
+++ b/slosh.tac.sample
@@ -5,7 +5,6 @@ Copyright (c) 2008  Dustin Sallings <dustin@spy.net>
 """
 
 import sys
-import ConfigParser
 
 sys.path.append("lib")
 
@@ -15,8 +14,9 @@ from twisted.internet import defer, task
 
 import slosh
 
-conf = ConfigParser.ConfigParser()
-conf.read('slosh.conf')
+# Basic configuration
+PORT=8080
+ROOT='example'
 
 application = service.Application('slosh')
 serviceCollection = service.IServiceCollection(application)
@@ -24,12 +24,9 @@ serviceCollection = service.IServiceCollection(application)
 # Keep really short sessions.
 server.Session.sessionTimeout=30
 
-root = static.File(conf.get("web", "root"))
+root = static.File(ROOT)
 root.putChild('topics', slosh.Topics())
 
 site = server.Site(root)
 site.sessionCheckTime = 30
-portnum = 8000
-if conf.has_option('web', 'port'):
-    portnum = conf.getint('web', 'port')
-internet.TCPServer(portnum, site).setServiceParent(serviceCollection)
+internet.TCPServer(PORT, site).setServiceParent(serviceCollection)
